k3s/apps/wallos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallos
  labels:
    app.kubernetes.io/name: wallos
